<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/llTapBody" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/rlStatus" android:layout_width="fill_parent" android:layout_height="450.0dip">
            <ImageView android:id="@id/imgTapStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
            <TextView android:textSize="30.0sp" android:textColor="@android:color/black" android:id="@id/textTapStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_tap_status_title" android:layout_centerVertical="true" android:textAlignment="center" android:layout_marginStart="0.0dip" android:layout_alignParentStart="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rlTapDeviceNFCReader" android:background="@color/colorPrimary" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" android:layout_alignParentBottom="true">
            <ImageView android:id="@id/imgTap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:layout_toRightOf="@id/imgTap" android:layout_centerInParent="true" android:layout_marginStart="10.0dip" android:layout_toEndOf="@id/imgTap">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_tap_hold_description" android:layout_marginStart="10.0dip" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/rlScanBarcode" android:background="@color/colorPrimary" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" android:layout_alignParentBottom="true">
            <ImageView android:id="@id/imgTapBarcode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:layout_toRightOf="@id/imgTapBarcode" android:layout_centerInParent="true" android:layout_marginStart="10.0dip" android:layout_toEndOf="@id/imgTapBarcode">
                <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_tap_barcode_description" android:layout_marginStart="10.0dip" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>